--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -26,10 +26,8 @@
   },
   "career":{
     "my_career": "Моја кариера",
-    "nextcode": "Nextcode",
-    "nextcode_des": "Now I am in Nextcode and develop website with Python code for genetic analysis.",
-    "nextcode_date": "Apr. 2016",
-    "nextcode_job": "Python Developer",
+    "sentice": "Сентице Тецх ДООЕЛ",
+    "sentice_des": "Меѓу првите вработени.",
     "netease": "Netease Game",
     "netease_des": "In Netease game, I learned game service system and use Python code for ops.",
     "netease_date": "Jun. 2015",
