--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -32,7 +32,7 @@
     "netease_desc": "Мојата професионална кариера ја започнав во Нетцетера."
   },
   "blog":{
-    "my_blog": "Мојот Блог"
+    "my_blog": "Мој Блог"
   },
   "link":{
     "link": "Линк",
