--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -29,7 +29,7 @@
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "netcetera": "Нетцетера ДООЕЛ",
-    "netease_desc": "Мојата професионална кариера ја започнав во Нетцетера."
+    "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера."
   },
   "blog":{
     "my_blog": "Мој Блог"
