--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -13,7 +13,7 @@
   },
   "about_me":{
     "about_me": "За мене",
-    "des": "М-р по електротехника и ИТ."
+    "des": "М-р по електротехника и ИТ и технички лид."
   },
   "skills":{
     "my_skills": "Мои вештини"
@@ -29,7 +29,8 @@
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "netcetera": "Нетцетера ДООЕЛ",
-    "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера."
+    "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера.",
+    "feit": "Факултет за електротехника и ИТ, УКИМ Скопје"
   },
   "blog":{
     "my_blog": "Мој Блог"
