--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -28,9 +28,14 @@
     "my_career": "Моја кариера",
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
+    "sentice_date": "Август 2015",
     "netcetera": "Нетцетера ДООЕЛ",
     "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера.",
-    "feit": "Факултет за електротехника и ИТ, УКИМ Скопје"
+    "netcetera_date": "Јуни 2012",
+    "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
+    "feit_msc_date": "Ноември 2011",
+    "feit_ta_date": "Февруари 2011",
+    "feit_bsc_date": "Октомври 2007"
   },
   "blog":{
     "my_blog": "Мој Блог"
