--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -29,9 +29,11 @@
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "sentice_date": "Август 2015",
+    "sentice_job": "Сениор софтвер инжeнер, технички лид и систем администратор",
     "netcetera": "Нетцетера ДООЕЛ",
     "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера.",
     "netcetera_date": "Јуни 2012",
+    "netcetera_job": "Јава софтвер инжeнер",
     "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
     "feit_msc_date": "Ноември 2011",
     "feit_ta_date": "Февруари 2011",
