--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -36,8 +36,11 @@
     "netcetera_job": "Јава софтвер инжeнер",
     "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
     "feit_msc_date": "Ноември 2011",
+    "feit_msc_desc": "Продолжив со втор циклус на студии каде изучував повеќе предмети од областите на Систем во чип и наноелектроника. Развив Ц компајлер за доверлив процесор како дел од магистерската теза.",
     "feit_ta_date": "Февруари 2011",
-    "feit_bsc_date": "Октомври 2007"
+    "feit_ta_desc": "Моја задача беше помош на студентите при извршување на задачи на лабораториски вежби. Работев со микроконтролерот PIC16F877a. Предмет: Микроелектроника.",
+    "feit_bsc_date": "Октомври 2007",
+    "feit_bsc_desc": "Стекнав солидна основа од наука и инженерство. Учествував на неколку натпревари меѓу кои и меѓународниот натпревар Hardware & Software каде што нашиот тим го освои првото место."
   },
   "blog":{
     "my_blog": "Мој Блог"
