--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -1,6 +1,6 @@
 {
   "website":{
-    "title": "Igor's blog"
+    "title": "Блогот на Игор"
   },
   "nav":{
     "home": "Дома",
@@ -37,17 +37,20 @@
     "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
     "feit_msc_date": "Ноември 2011",
     "feit_msc_desc": "Продолжив со втор циклус на студии каде изучував повеќе предмети од областите на Систем во чип и наноелектроника. Развив Ц компајлер за доверлив процесор како дел од магистерската теза.",
+    "feit_msc_job": "Магистерски студии",
     "feit_ta_date": "Февруари 2011",
     "feit_ta_desc": "Моја задача беше помош на студентите при извршување на задачи на лабораториски вежби. Работев со микроконтролерот PIC16F877a. Предмет: Микроелектроника.",
+    "feit_ta_job": "Демонстратор",
     "feit_bsc_date": "Октомври 2007",
-    "feit_bsc_desc": "Стекнав солидна основа од наука и инженерство. Учествував на неколку натпревари меѓу кои и меѓународниот натпревар Hardware & Software каде што нашиот тим го освои првото место."
+    "feit_bsc_desc": "Стекнав солидна основа од наука и инженерство. Учествував на неколку натпревари меѓу кои и меѓународниот натпревар Hardware & Software каде што нашиот тим го освои првото место.",
+    "feit_bsc_job": "Додипломски студии"
   },
   "blog":{
     "my_blog": "Мој Блог"
   },
   "link":{
     "link": "Линк",
-    "view": "views"
+    "view": "прегледи"
   }
 
 }
