--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -34,7 +34,8 @@
     "ldap": "Проект 12",
     "rlb": "Проект 13",
     "conf": "Проект 14",
-    "hwsw2010": "Проект 15"
+    "hwsw2010": "Проект 15",
+    "hwsw2011": "Проект 16"
   },
   "career":{
     "my_career": "Моја кариера",
