--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -20,28 +20,43 @@
   },
   "projects":{
     "my_projects": "My Projects",
-    "jalpc": "This project is my project. I use javescript to get repo's information all my repos have only one request.",
-    "cpython": "This project is other's project. I use another request to get repo's information.",
-    "familycode": "This is another project."
+    "pdc": "Проект 1",
+    "hls": "Проект 2",
+    "cc": "Проект 3",
+    "esa": "Проект 4",
+    "apc": "Проект 5",
+    "rte": "Проект 6",
+    "sunb": "Проект 7",
+    "ubs": "Проект 8",
+    "tie": "Проект 9",
+    "tt": "Проект 10",
+    "pog": "Проект 11",
+    "ldap": "Проект 12",
+    "rlb": "Проект 13",
+    "conf": "Проект 14",
+    "hwsw2010": "Проект 15",
+    "hwsw2011": "Проект 16"
   },
   "career":{
     "my_career": "My Career",
-    "nextcode": "Nextcode",
-    "nextcode_des": "Now I am in Nextcode and develop website with Python code for genetic analysis.",
-    "nextcode_date": "Apr. 2016",
-    "nextcode_job": "Python Developer",
-    "netease": "Netease Game",
-    "netease_des": "In Netease game, I learned game service system and use Python code for ops.",
-    "netease_date": "Jun. 2015",
-    "netease_job": "Dev Ops",
-    "ucloud": "Ucloud",
-    "ucloud_des": "In ucloud, I started to deal with servers and Linux system and use shell scripts to manage massive server.",
-    "ucloud_date": "Sep. 2013",
-    "ucloud_job": "Dev Ops",
-    "college": "Graduation",
-    "college_des": "At July 2013,I graduated from college and started my IT technology tour.",
-    "college_date": "Jul. 2013",
-    "college_job": "Student"
+    "sentice": "Sentice Tech LLC",
+    "sentice_desc": "I started working as one of the first employees in Sentice Tech LLC, where besides leading several projects in several technologies, I am also involved in the setup and maintenance of all internal network and system architecture of the company.",
+    "sentice_date": "August 2015",
+    "sentice_job": "Senior Software Developer, Technical Lead & Sys Admin",
+    "netcetera": "Netcetera AG",
+    "netcetera_desc": "I started my professional programming career at Netcetera AG in Skopje, where I was involved in several Java EE projects using various Java techonlogies, some of which: Spring, Hibernate, JDBC, Servlets, JSP, Struts, etc. Gained valuable knowledge.",
+    "netcetera_date": "June 2012",
+    "netcetera_job": "Java Software Engineer",
+    "feit": "Faculty of Electrical Engineering and IT, UKIM, Skopje",
+    "feit_msc_date": "November 2011",
+    "feit_msc_desc": "Continued my studies involving several subjects from the fields of SoC and Nanoelectronics. Developed a C compiler for Dependable processor as a part of M.Sc. Thesis.",
+    "feit_msc_job": "M.Sc. Studies",
+    "feit_ta_date": "February 2011",
+    "feit_ta_desc": "Assisted students in finishing laboratory tasks. Worked with PIC16F877a microcontroller. Subject: Mictoelectronics.",
+    "feit_ta_job": "Teaching Assistant",
+    "feit_bsc_date": "October 2007",
+    "feit_bsc_desc": "Received solid science and engineering knowledge base. Participated in few competitions for the Faculty, one of which \"Hardware & Software\" international competition in 2011 when our team won the first prize.",
+    "feit_bsc_job": "B.Sc. Studies"
   },
   "blog":{
     "my_blog": "My Blog"
