--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -20,22 +20,22 @@
   },
   "projects":{
     "my_projects": "My Projects",
-    "pdc": "Проект 1",
-    "hls": "Проект 2",
-    "cc": "Проект 3",
-    "esa": "Проект 4",
-    "apc": "Проект 5",
-    "rte": "Проект 6",
-    "sunb": "Проект 7",
-    "ubs": "Проект 8",
-    "tie": "Проект 9",
-    "tt": "Проект 10",
-    "pog": "Проект 11",
-    "ldap": "Проект 12",
-    "rlb": "Проект 13",
-    "conf": "Проект 14",
-    "hwsw2010": "Проект 15",
-    "hwsw2011": "Проект 16"
+    "pdc": "Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging).",
+    "hls": "Real-time Audio processing / HLS Streaming Server fully developed with Bash and streamed by Nginx.",
+    "cc": "C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).",
+    "esa": "Web Application for reporting disasters around the World. Customer decided to use Liferay CMS for adding and managing content. I participated in developing scripts for migrating content from an older platform to Liferay. I also developed additional customer-specific customizations regarding the workflow of reporting a disaster, developed specific views using Liferay Portlets.",
+    "apc": "System for initiating gate opening depending on proximity to location. The system consists of Android application and Server managing location entries and call points.",
+    "rte": "A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.",
+    "sunb": "Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.",
+    "ubs": "Web Application - Calculator and Financial Advisor for (but not limited to) mortgages, performing complex calculations.",
+    "tie": "Web Application for organizing hospital data for patients from different hospitals in Switzerland.",
+    "tt": "Web Application for Entering and tracking time for all employees with Reporting Mechanisms for time spent by person/project.",
+    "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer.",
+    "ldap": "Web API for managing LDAP users (add user, change user group, change password).",
+    "rlb": "Android application for remote control of temperature, mode of work, fan speed and additional parameters over Wi-Fi.",
+    "conf": "Web Application based on Atlassian Confluence which includes a lot of customizations intended to meet company needs. It included plugins for managing and showing content, conference room planner, employee data organizer, etc.",
+    "hwsw2010": "The system provides 3D path mapping. Involves a robot sending data via Bluetooth to PC, which draws the robot's real-time 3D path.",
+    "hwsw2011": "Realization of a system for autonomous research of unknown terrain, akin to the Mars Rover. The system was comprised of an RP6 robot, RFID reader, GPRS modem, gyroscope, dsPIC microcontroller and a Personal Computer."
   },
   "career":{
     "my_career": "My Career",
