--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -20,8 +20,8 @@
   },
   "projects":{
     "my_projects": "Мои проекти",
-    "pdc": "Проект 1",
-    "hls": "Проект 2",
+    "pdc": "Интеграција на VOIP сервиси и метаподатоци во разни CRM системи",
+    "hls": "HLS сервер за аудио процесирање и стрим во реално време развиен со Bash и Nginx",
     "cc": "Проект 3",
     "esa": "Проект 4",
     "apc": "Проект 5",
