--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -22,8 +22,8 @@
     "my_projects": "Мои проекти",
     "pdc": "Интеграција на VOIP сервиси и метаподатоци во разни CRM системи",
     "hls": "HLS сервер за аудио процесирање и стрим во реално време развиен со Bash и Nginx",
-    "cc": "Проект 3",
-    "esa": "Проект 4",
+    "cc": "Ц Компајлер развиен во Јава и JavaCC парсер генераторот. Резултатот е асемблерски код за доверлив процесор со оригинално инструкциско множество, развиен од IHP институтот за микроелектроника во Франкфурт (Одра).",
+    "esa": "Веб апликација за пријавување на масовни несреќи низ Светот. Изграден со Liferay CMS за додавање и управување со содржината. Учествував во специјализација на Liferay CMS за потребите на клиентот.",
     "apc": "Проект 5",
     "rte": "Проект 6",
     "sunb": "Проект 7",
