--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -24,7 +24,7 @@
     "hls": "HLS сервер за аудио процесирање и стрим во реално време развиен со Bash и Nginx",
     "cc": "Ц Компајлер развиен во Јава и JavaCC парсер генераторот. Резултатот е асемблерски код за доверлив процесор со оригинално инструкциско множество, развиен од IHP институтот за микроелектроника во Франкфурт (Одра).",
     "esa": "Веб апликација за пријавување на масовни несреќи низ Светот. Изграден со Liferay CMS за додавање и управување со содржината. Учествував во специјализација на Liferay CMS за потребите на клиентот.",
-    "apc": "Проект 5",
+    "apc": "Систем за иницирање на отворање на порта во зависност од близината до целта. Системот се состои од андроид апликација и сервер кој што управува со додавањето на локации за ѕвонење.",
     "rte": "Проект 6",
     "sunb": "Проект 7",
     "ubs": "Проект 8",
