--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -25,17 +25,17 @@
     "cc": "Ц Компајлер развиен во Јава и JavaCC парсер генераторот. Резултатот е асемблерски код за доверлив процесор со оригинално инструкциско множество, развиен од IHP институтот за микроелектроника во Франкфурт (Одра).",
     "esa": "Веб апликација за пријавување на масовни несреќи низ Светот. Изграден со Liferay CMS за додавање и управување со содржината. Учествував во специјализација на Liferay CMS за потребите на клиентот.",
     "apc": "Систем за иницирање на отворање на порта во зависност од близината до целта. Системот се состои од андроид апликација и сервер кој што управува со додавањето на локации за ѕвонење.",
-    "rte": "Проект 6",
-    "sunb": "Проект 7",
-    "ubs": "Проект 8",
-    "tie": "Проект 9",
-    "tt": "Проект 10",
-    "pog": "Проект 11",
-    "ldap": "Проект 12",
-    "rlb": "Проект 13",
-    "conf": "Проект 14",
-    "hwsw2010": "Проект 15",
-    "hwsw2011": "Проект 16"
+    "rte": "A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.",
+    "sunb": "Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.",
+    "ubs": "Web Application - Calculator and Financial Advisor for (but not limited to) mortgages, performing complex calculations.",
+    "tie": "Web Application for organizing hospital data for patients from different hospitals in Switzerland.",
+    "tt": "Web Application for Entering and tracking time for all employees with Reporting Mechanisms for time spent by person/project.",
+    "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer.",
+    "ldap": "Web API for managing LDAP users (add user, change user group, change password).",
+    "rlb": "Android application for remote control of temperature, mode of work, fan speed and additional parameters over Wi-Fi.",
+    "conf": "Web Application based on Atlassian Confluence which includes a lot of customizations intended to meet company needs. It included plugins for managing and showing content, conference room planner, employee data organizer, etc.",
+    "hwsw2010": "The system provides 3D path mapping. Involves a robot sending data via Bluetooth to PC, which draws the robot's real-time 3D path.",
+    "hwsw2011": "Realization of a system for autonomous research of unknown terrain, akin to the Mars Rover. The system was comprised of an RP6 robot, RFID reader, GPRS modem, gyroscope, dsPIC microcontroller and a Personal Computer."
   },
   "career":{
     "my_career": "Моја кариера",
