--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -20,8 +20,8 @@
   },
   "projects":{
     "my_projects": "Мои проекти",
-    "pdc": "Интеграција на VOIP сервиси и метаподатоци во разни CRM системи",
-    "hls": "HLS сервер за аудио процесирање и стрим во реално време развиен со Bash и Nginx",
+    "pdc": "Интеграција на VOIP сервиси и метаподатоци во разни CRM системи.",
+    "hls": "HLS сервер за аудио процесирање и стрим во реално време развиен со Bash и Nginx.",
     "cc": "Ц Компајлер развиен во Јава и JavaCC парсер генераторот. Резултатот е асемблерски код за доверлив процесор со оригинално инструкциско множество, развиен од IHP институтот за микроелектроника во Франкфурт (Одра).",
     "esa": "Веб апликација за пријавување на масовни несреќи низ Светот. Изграден со Liferay CMS за додавање и управување со содржината. Учествував во специјализација на Liferay CMS за потребите на клиентот.",
     "apc": "Систем за иницирање на отворање на порта во зависност од близината до целта. Системот се состои од андроид апликација и сервер кој што управува со додавањето на локации за ѕвонење.",
