--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -29,10 +29,10 @@
     "sunb": "Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.",
     "ubs": "Web Application - Calculator and Financial Advisor for (but not limited to) mortgages, performing complex calculations.",
     "tie": "Систем за организирање на податоци за пациенти од разни болници.",
-    "tt": "Web Application for Entering and tracking time for all employees with Reporting Mechanisms for time spent by person/project.",
-    "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer.",
-    "ldap": "Web API for managing LDAP users (add user, change user group, change password).",
-    "rlb": "Android application for remote control of temperature, mode of work, fan speed and additional parameters over Wi-Fi.",
+    "tt": "Систем за додавање и бележење на време за сите вработени со механизми за генерирање на репорти за потрошеното време.",
+    "pog": "JavaFx Десктоп апликација за лесно тагирање и пребарување на фотографиите во вашиот компјутер.",
+    "ldap": "Веб интерфејс за менаџирање на LDAP корисници (Додавање корисник, менување атрибути, менување шифра).",
+    "rlb": "Андроид апликација за далечинсо управување на температура, режим на работа, брзина на вентилатор и дополнителни параметри преку Wi-Fi.",
     "conf": "Web Application based on Atlassian Confluence which includes a lot of customizations intended to meet company needs. It included plugins for managing and showing content, conference room planner, employee data organizer, etc.",
     "hwsw2010": "The system provides 3D path mapping. Involves a robot sending data via Bluetooth to PC, which draws the robot's real-time 3D path.",
     "hwsw2011": "Realization of a system for autonomous research of unknown terrain, akin to the Mars Rover. The system was comprised of an RP6 robot, RFID reader, GPRS modem, gyroscope, dsPIC microcontroller and a Personal Computer."
