--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -25,9 +25,9 @@
     "cc": "Ц Компајлер развиен во Јава и JavaCC парсер генераторот. Резултатот е асемблерски код за доверлив процесор со оригинално инструкциско множество, развиен од IHP институтот за микроелектроника во Франкфурт (Одра).",
     "esa": "Веб апликација за пријавување на масовни несреќи низ Светот. Изграден со Liferay CMS за додавање и управување со содржината. Учествував во специјализација на Liferay CMS за потребите на клиентот.",
     "apc": "Систем за иницирање на отворање на порта во зависност од близината до целта. Системот се состои од андроид апликација и сервер кој што управува со додавањето на локации за ѕвонење.",
-    "rte": "A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.",
-    "sunb": "Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.",
-    "ubs": "Web Application - Calculator and Financial Advisor for (but not limited to) mortgages, performing complex calculations.",
+    "rte": "Систем кој обединува пријавување настани до полиција, пожарна и прва помош. Се состои од мобилна апликација за пријавување настани во реално време и сервер што управува со податоците.",
+    "sunb": "Андроид апликација за далечинско управување со електрични уреди со помош на Bluetooth Low Energy протоколот.",
+    "ubs": "Веб Апликација - Калкулатор и Финансиски советник за хипотеки и кредити.",
     "tie": "Систем за организирање на податоци за пациенти од разни болници.",
     "tt": "Систем за додавање и бележење на време за сите вработени со механизми за генерирање на репорти за потрошеното време.",
     "pog": "JavaFx Десктоп апликација за лесно тагирање и пребарување на фотографиите во вашиот компјутер.",
