--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -27,7 +27,7 @@
     "apc": "Систем за иницирање на отворање на порта во зависност од близината до целта. Системот се состои од андроид апликација и сервер кој што управува со додавањето на локации за ѕвонење.",
     "rte": "Систем кој обединува пријавување настани до полиција, пожарна и прва помош. Се состои од мобилна апликација за пријавување настани во реално време и сервер што управува со податоците.",
     "sunb": "Андроид апликација за далечинско управување со електрични уреди со помош на Bluetooth Low Energy протоколот.",
-    "ubs": "Веб Апликација - Калкулатор и Финансиски советник за хипотеки и кредити.",
+    "ubs": "Веб Апликација - калкулатор и финансиски советник што обединува повеќе системи и врши пресметки за хипотеки и кредити.",
     "tie": "Систем за организирање на податоци за пациенти од разни болници.",
     "tt": "Систем за додавање и бележење на време за сите вработени со механизми за генерирање на репорти за потрошеното време.",
     "pog": "JavaFx Десктоп апликација за лесно тагирање и пребарување на фотографиите во вашиот компјутер.",
