--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -39,6 +39,7 @@
   },
   "career":{
     "my_career": "My Career",
+    "my_education": "My Education",
     "sentice": "Sentice Tech LLC",
     "sentice_desc": "I started working as one of the first employees in Sentice Tech LLC, where besides leading several projects in several technologies, I am also involved in the setup and maintenance of all internal network and system architecture of the company.",
     "sentice_date": "August 2015",
