--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -39,6 +39,7 @@
   },
   "career":{
     "my_career": "Моја кариера",
+    "my_education": "Мое образование",
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "sentice_date": "Август 2015",
