--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -9,7 +9,7 @@
     "projects": "Проекти",
     "career": "Кариера",
     "blog": "Блог",
-    "link": "Линк"
+    "link": "Врски"
   },
   "about_me":{
     "about_me": "За мене",
@@ -63,7 +63,7 @@
     "my_blog": "Мој Блог"
   },
   "link":{
-    "link": "Линк",
+    "link": "Врски",
     "view": "прегледи"
   }
 
