--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -28,6 +28,7 @@
     "rte": "A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.",
     "sunb": "Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.",
     "ubs": "Web Application - Calculator and Financial Advisor for (but not limited to) mortgages, performing complex calculations.",
+    "wht": "Web Application - Calculator for calculating withold tax of different types of transactions in different countries.",
     "tie": "Web Application for organizing hospital data for patients from different hospitals.",
     "tt": "Web Application for Entering and tracking time for all employees with Reporting Mechanisms for time spent by person/project.",
     "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer.",
