--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -31,7 +31,7 @@
     "wht": "Web Application - Calculator for calculating withold tax of different types of transactions in different countries.",
     "tie": "Web Application for organizing and sharing hospital data for patients between different hospitals.",
     "tt": "Web Application for Entering and tracking time for all employees with Reporting Mechanisms for time spent by person/project.",
-    "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer.",
+    "pog": "JavaFx Desktop Application for easy tagging and searching of photos inside your computer. Includes face recognition algorithm.",
     "ldap": "Web API for managing LDAP users (add user, change user group, change password).",
     "rlb": "Android application for remote control of temperature, mode of work, fan speed and additional parameters over Wi-Fi.",
     "conf": "Web Application based on Atlassian Confluence which includes a lot of customizations intended to meet company needs. It included plugins for managing and showing content, conference room planner, employee data organizer, etc.",
