--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -45,7 +45,7 @@
     "sentice_date": "Август 2015",
     "sentice_job": "Сениор софтвер инжeнер, технички лид и систем администратор",
     "netcetera": "Нетцетера ДООЕЛ",
-    "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера.",
+    "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера, каде бев вклучен во повеќе Java EE технологии, вклучувајќи: Spring, Hibernate, JDBC, Servlets, JSP, Struts, и тн. Стекнав значајно искуство.",
     "netcetera_date": "Јуни 2012",
     "netcetera_job": "Јава софтвер инжeнер",
     "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
