--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -13,7 +13,7 @@
   },
   "about_me":{
     "about_me": "За мене",
-    "des": "М-р по електротехника и ИТ и технички лид."
+    "des": "М-р по електротехника и ИТ и технички водач."
   },
   "skills":{
     "my_skills": "Мои вештини"
@@ -43,7 +43,7 @@
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "sentice_date": "Август 2015",
-    "sentice_job": "Сениор софтвер инжeнер, технички лид и систем администратор",
+    "sentice_job": "Сениор софтвер инжeнер, технички водач и систем администратор",
     "netcetera": "Нетцетера ДООЕЛ",
     "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера, каде бев вклучен во повеќе Java EE технологии, вклучувајќи: Spring, Hibernate, JDBC, Servlets, JSP, Struts, и тн. Стекнав значајно искуство.",
     "netcetera_date": "Јуни 2012",
