--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -28,7 +28,7 @@
     "rte": "Систем кој обединува пријавување настани до полиција, пожарна и прва помош. Се состои од мобилна апликација за пријавување настани во реално време и сервер што управува со податоците.",
     "sunb": "Андроид апликација за далечинско управување со електрични уреди со помош на Bluetooth Low Energy протоколот.",
     "ubs": "Веб Апликација - калкулатор и финансиски советник што обединува повеќе системи и врши пресметки за хипотеки и кредити.",
-    "tie": "Систем за организирање на податоци за пациенти од разни болници.",
+    "tie": "Систем за организирање на податоци за пациенти од разни болници и споделување на податоците помеѓу болници.",
     "tt": "Систем за додавање и бележење на време за сите вработени со механизми за генерирање на репорти за потрошеното време.",
     "pog": "JavaFx Десктоп апликација за лесно тагирање и пребарување на фотографиите во вашиот компјутер.",
     "ldap": "Веб интерфејс за менаџирање на LDAP корисници (Додавање корисник, менување атрибути, менување шифра).",
