--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -44,11 +44,11 @@
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени.",
     "sentice_date": "Август 2015",
-    "sentice_job": "Сениор софтвер инжeнер, технички водач и систем администратор",
+    "sentice_job": "Сениор софтверски инжeнер, технички водач и систем администратор",
     "netcetera": "Нетцетера ДООЕЛ",
     "netcetera_desc": "Мојата професионална кариера ја започнав во Нетцетера, каде бев вклучен во повеќе Java EE технологии, вклучувајќи: Spring, Hibernate, JDBC, Servlets, JSP, Struts, и тн. Стекнав значајно искуство.",
     "netcetera_date": "Јуни 2012",
-    "netcetera_job": "Јава софтвер инжeнер",
+    "netcetera_job": "Јава софтверски инжeнер",
     "feit": "Факултет за електротехника и ИТ, УКИМ Скопје",
     "feit_msc_date": "Ноември 2011",
     "feit_msc_desc": "Продолжив со втор циклус на студии каде изучував повеќе предмети од областите на Систем во чип и наноелектроника. Развив Ц компајлер за доверлив процесор како дел од магистерската теза.",
