--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -42,7 +42,7 @@
     "my_career": "Моја кариера",
     "my_education": "Мое образование",
     "sentice": "Сентице Тецх ДООЕЛ",
-    "sentice_desc": "Меѓу првите вработени.",
+    "sentice_desc": "Меѓу првите вработени, одговорен за поставување и одржување на внатрешната инфраструктура на компанијата. Работам на повеќе проекти изработени во неколку различни програмски јазици.",
     "sentice_date": "Август 2015",
     "sentice_job": "Сениор софтверски инжeнер, технички водач и систем администратор",
     "netcetera": "Нетцетера ДООЕЛ",
