updated blog tag

--- a/_posts/2017-06-10-test-blog.md
+++ b/_posts/2017-06-10-test-blog.md
@@ -5,7 +5,7 @@ date:   2019-06-10
 desc: "Test Blog"
 keywords: "blog,test"
 categories: [NODEJS]
-tags: [Jalpc,Jekyll]
+tags: [nodejs]
 icon: icon-html
 ---
 
