--- a/_posts/nodejs/2017-06-10-test-blog.md
+++ b/_posts/nodejs/2017-06-10-test-blog.md
@@ -4,7 +4,7 @@ title:  "Test Blog"
 date:   2019-06-12
 desc: "Test Blog"
 keywords: "blog,test"
-categories: [NODEJS]
+categories: [nodejs]
 tags: [nodejs]
 icon: icon-html
 ---
