--- a/static/locales/mk.json
+++ b/static/locales/mk.json
@@ -41,6 +41,10 @@
   "career":{
     "my_career": "Моја кариера",
     "my_education": "Мое образование",
+    "one_inside": "One Inside AG",
+    "one_inside_desc": "Развој на проети базирани на Adobe AEM OSGi CMS.",
+    "one_inside_date": "Декември 2019",
+    "one_inside_job": "Сениор софтверски инженер, Сертифициран Adobe AEM архитект",
     "sentice": "Сентице Тецх ДООЕЛ",
     "sentice_desc": "Меѓу првите вработени, одговорен за поставување и одржување на внатрешната инфраструктура на компанијата. Работам на повеќе проекти изработени во неколку различни програмски јазици.",
     "sentice_date": "Август 2015",
